--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.11.0",
     "axios": "^1.7.3",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.5",
     "framer-motion": "^11.3.23",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
